<resources>
    <string name="mode">Mode</string>
    <string name="app_id" translatable="false">773402562742917</string>
    <string name="app_name">VideoDownloaderIG</string>
    <string name="choose_mail_client">Choose Mail Client</string>
    <string name="share_email_no_email_client_installed">No email client installed.</string>
    <string name="progress_dialog_msg">VideoDownloaderIG : Please wait..</string>
    <string name="login">Login</string>
    <string name="postlaterconfirmtoast">Photo kept for posting later.</string>
    <string name="postlaterconfirmtoastvideo">Video kept for posting later.</string>
    <string name="therewasproblem">Sorry. There was a problem. Please try again</string>
    <string name="porblemfindingphoto">There was a problem. Perhaps this photo is from a private user, or network issue.</string>
    <string name="problemfindingvideo">There was a problem. Perhaps this video is from a private user, or network issue.</string>
    <string name="howToTurnOffPostLater">To turn off Quick Post-Later just return here to the settings</string>
    <string name="HowToTurnOffQuickSave">To turn OFF Quick Save mode, open Repost by tapping on the app icon</string>
    <string name="HowToTurnOffQuickPost">To turn OFF Quick Repost mode, open Repost by tapping on the app icon</string>
    <string name="quickKeepDescr">Post-Later will automatically be selected, keeping photos and videos for you to post them later and bypassing the Selection Popup window.</string>
    <string name="quickRepostDescr">Instagram will automatically be selected as the Repost (repost) destination, bypassing the Selection Popup window.</string>
    <string name="quickSaveDescr">Photos and videos will automatically be saved to your phone, bypassing the Selection Popup window.</string>
    <string name="defaultModeDescr">A selection popup window will appear allowing you to choose between reposting, keeping to repost later, saving to your phone or sharing with other apps.</string>
    <string name="title_activity_post_photo">Post Photo</string>
    <string name="action_settings">Settings</string>
    <string name="text_manage_signature">Customize Post Signature</string>
    <string name="showPostLaterBtn">Show Post-Later Photos</string>
    <string name="AddWatermark">Add watermark for credit</string>
    <string name="txtChkboxForForeground">The only way to make sure Repost is always available requires the constant notification (Android forces it).  You can stop the notification but then use Share Link instead of Copy Link from Instagram.</string>
    <string name="Operation_Mode">Operation Mode</string>
    <string name="normal_mode">Selection Popup Mode</string>
    <string name="Quick_Repost_Mode">Quick Repost Mode</string>
    <string name="Quick_Save_Mode">Quick Save Mode</string>
    <string name="Quick_PostLater_Mode">Quick Post-Later Mode</string>
    <string name="PostLater_Methods">Post-Later Methods</string>
    <string name="Post_using_Instagram">Post using Instagram app (default)</string>
    <string name="Kept_photos_desc">Kept photos are posted using the Instagram app. Post’s caption needs to be pasted manually.</string>
    <string name="DirectPost">Direct Post - beta (login required)</string>
    <string name="Kept_desc2">Kept photos are posted using Repost upload process. Faster and post’s caption gets automatically added to the post. DOES NOT APPLY TO VIDEOS. Social media share, emoji or tag features are not available yet. To enable this feature, login below to any Instagram account.</string>
    <string name="rateText">Please rate the app with 5 stars and help fellow Android users discover it.  Thanks for the support!</string>
    <string name="rateHowIsExperience">How is your experience so far with VideoDownloaderIG?</string>
    <string name="bad">Bad</string>
    <string name="good">Good</string>
    <string name="mayBeFromPrivateAcct">That photo may be from a private account so it is not possible to VideoDownloaderIG it at this time.</string>
    <string name="noInternet">There is no internet connection. Please check if you are connected and try again.</string>
    <string name="downloadingVideo">Downloading Video!</string>
    <string name="Run_Tutorial">Run Tutorial</string>
    <string name="emailSupport">Email Support</string>
    <string name="noEmailClients">There are no email clients installed.</string>
    <string name="startupStr1">Please take 30 seconds to learn how to use VideoDownloaderIG.\n\nYou will be reposting from the Instagram App.\n\nJust go through the next few screens to see how.</string>
    <string name="startupStr2" />
    <string name="visit_support_site">Support on the Web</string>
    <string name="title_activity_settings2">VideoDownloaderIG Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_watermark">Credit Watermark</string>
    <string name="pref_description_watermark">A watermark with author\'s profile picture and username will be displayed at bottom of photo
    </string>
    <string name="pref_title_foreground">Always stay ready - Important!</string>
    <string-array name="alpha_choice">
        <item>Transparent</item>
        <item>Black</item>
    </string-array>
    <string-array name="pref_signature_list_titles">
        <item>Off</item>
        <item>Add to caption</item>
        <item>Replace caption</item>

    </string-array>
    <string-array name="pref_signature_list_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>

    </string-array>
    <string name="pref_header_signature">Signature</string>
    <string name="pref_title_signature_type">Type</string>
    <string name="pref_title_signature_text">Signature Text</string>
    <string name="login_success">You are now logged in as</string>
    <string name="the_caption_was_copied_to_the_clipboared">The caption was copied to the clipboard</string>
    <string name="long_press_to_paste_in_instagram">Long press to paste in Instagram.</string>
    <string name="share_app_buttontext">Tell Friends about VideoDownloaderIG</string>
    <string name="uploaded_success">Photo has been posted!</string>
    <string name="uploaded_failure">There was a probem uploading!</string>
    <string name="edit_photo_buttontext">Edit Photo</string>
    <string name="ad_button">Suggested Apps</string>
    <string name="start_tutorial_buttontext">Start 30 Second Tutorial</string>
    <string name="tutorial_tagline">The #1 VideoDownloaderIG app worldwide!</string>
    <string name="end_tutorial_buttontext">Try it yourself in Instagram.\nClick on three dots on next screen.</string>
    <string name="instagram_bug">Instagram might require new permissions to be approved. If Instagram crashes when using VideoDownloaderIG, open Instagram, press on the upload button, upload a photo and accept the permission request. After, you can restart using VideoDownloaderIG.</string>
    <string name="instagram_bug_title">You have updated to Android version 6.0 Marshmellow</string>
    <string name="scheduled">Scheduled</string>
    <string name="postBtn">Post</string>
    <string name="foreground_notification">VideoDownloaderIG is in standby mode. Click for more info. </string>
    <string name="foreground_notification_scheduling">Ready for scheduling.</string>
    <string name="facebook_app_id">773402562742917</string>
    <string name="schedule_notif_text">Click here to post.</string>
    <string name="scheduled_notif_title">VideoDownloaderIG - Scheduled Post</string>
    <string name="toast_scheduled">Post scheduled.\nYou will be notified at the scheduled time.\nOpen notification to finish the posting.</string>
    <string name="paid_settings">Paid Options</string>
    <string name="remove_VideoDownloaderIG">No changes to caption. @VideoDownloaderIG and #VideoDownloaderIG will not be added to caption.</string>
    <string name="remove_VideoDownloaderIG_summary">The caption when pasted will not contain @VideoDownloaderIG or #VideoDownloaderIG</string>
    <string name="warning_about_private_account">Note: You won\'t see \'Copy URL\' on private photos.\nInstagram won\'t provide links of private users.</string>
    <string name="multi_dialog">To VideoDownloaderIG multiple images/videos, upload them manually from the VideoDownloaderIG-Multi-Post folder. Paste the caption as usual.</string>
    <string name="accept">Accept</string>
    <string name="eula_string">
By clicking "Confirm", you consent to the use of anonymous data (like your country) to be used to show relevant ads, and that you are at least 16 years old. You can read the terms in its entirety by clicking on the link in the Google Play app description for VideoDownloaderIG.\n\nWe thank you for installing our app and helping to improve the user experience by clicking "Confirm".
    </string>
    <string name="ad_attribution">Ad</string>
    <string name="ob_header0">QUICK TUTORIAL</string>
    <string name="ob_header1">START IN THE INSTAGRAM APP</string>
    <string name="ob_header2">CLICK SHARE LINK</string>
    <string name="ob_header3">CLICK ON VideoDownloaderIG</string>
    <string name="ob_header4">VideoDownloaderIG WILL POP UP</string>
    <string name="ob_header5">PHOTO WILL BE SENT TO INSTAGRAM</string>
    <string name="ob_get_started">TRY IT YOURSELF NOW</string>
    <string name="ob_desc0">To VideoDownloaderIG you start the action in Instagram</string>
    <string name="ob_desc1">Find a photo and click the three dots or paper airplane icon (look for Share Link)</string>
    <string name="ob_desc3">You may need to scroll to find</string>
    <string name="ob_desc2">The photo must be public for it to be available</string>
    <string name="ob_desc4">You can click the Instagram icon to VideoDownloaderIG, or save the photo</string>
    <string name="ob_desc5">The original caption will be in the clipboard</string>
    <string name="MobKnowSdkKey">b561b27a66ad59accff8caf846ff515c</string>
    <string name="mobKnowSdkSendDataPermission">true</string>
    <string name="myCoolButton" />
    <string name="banner_ad_unit_id">ca-app-pub-1489694459182078/7704789342</string>
    <string name="upgrade_menu">Upgrade</string>
    <string name="upgrade_to_premium">Upgrade to Remove Ads</string>
    <string name="upgrade_header_text">Upgrade to Remove Ads\\n\\nONE TIME PAYMENT</string>
    <string name="upgrade_features">No Ads\nPriority Support by Developer\n100% Risk Free - Refund Anytime</string>
    <string name="upgrade_button_text">Upgrade Now</string>
    <string name="auto_saving">Quick Saving......</string>
    <string name="auto_saving_progress">Downloading Media....</string>
    <string name="back_to_instagram">Back To Instagram</string>
    <string name="_3_99"><strike>$3.99</strike></string>
    <string name="close">Close</string>
    <string name="we_need_permissions">We Need Permissions</string>
    <string name="access_to_photos_media_and_files">Access to Photos, Media and Files</string>
    <string name="needed_for_temp_files_to_send_to_instagram">Needed for temp files to send to Instagram.</string>
    <string name="approve_permissions">Approve Permissions</string>
    <string name="login_to_instagram_then_click_here">After you are Logged in Click Here</string>
    <string name="run_tutorial_again">Run Tutorial Again</string>
    <string name="change_login_for_private_content">Change Login for Private Content</string>
    <string name="start_here_nrun_tutorial">Start Here Run Tutorial</string>
    <string name="getting_started_video">Getting Started Video</string>
    <string name="backup_db">Backup DB</string>
    <string name="preview_image">Preview Image</string>
    <string name="video_icon">Video Icon</string>
    <string name="pref_title_custom_watermark">Custom Watermark</string>
    <string name="pref_description_custom_watermark">Your custom image will be displayed on the photo.</string>
</resources>